--- a/todo-app-react-redux/package.json
+++ b/todo-app-react-redux/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
