--- a/todo-app-react-redux/package.json
+++ b/todo-app-react-redux/package.json
@@ -49,6 +49,7 @@
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^29.3.1",
     "msw": "^0.49.2",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^5.0.4"
   }
 }
