--- a/todo-app-react-redux/package.json
+++ b/todo-app-react-redux/package.json
@@ -43,8 +43,9 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/lodash": "^4.14.195",
     "babel-jest": "^29.3.1",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^29.3.1",
