--- a/todo-app-react-redux/package.json
+++ b/todo-app-react-redux/package.json
@@ -6,6 +6,7 @@
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
