--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "todo-app-react-redux",
   "version": "0.1.0",
   "private": true,
+  "presets": {},
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.8.5",
@@ -13,15 +14,12 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --watchAll --env=jsdom",
-    "coverage": "react-scripts test --env=jsdom --watchAll=false --coverage",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -48,11 +46,19 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/lodash": "^4.14.195",
+    "@types/node": "^20.8.3",
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^29.3.1",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^29.3.1",
     "msw": "^0.49.2",
+    "postcss": "^8.4.31",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.0.4"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.4",
+    "vite": "^4.4.11",
+    "vite-plugin-svgr": "^4.1.0",
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
