--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.16.0",
+    "react-use-measure": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +58,7 @@
     "postcss": "^8.4.31",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vite": "^4.4.11",
     "vite-plugin-svgr": "^4.1.0",
