--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "presets": {},
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.14",
+    "@mui/x-date-pickers": "^6.16.2",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
