--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,16 @@
     "axios": "^0.27.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
-    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.16.0",
-    "react-use-measure": "^2.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "vite",
