--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.16.0",
+    "react-use-measure": "^2.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
