--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,22 @@
   "scripts": {
     "build": "npx tsc",
     "start": "ts-node ./src/index.ts",
-    "server": "nodemon ./src/index.ts"
+    "client": "npm run start --prefix ../client",
+    "server": "nodemon ./src/index.ts",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "concurrently": "^8.2.2",
     "typescript": "^5.3.2"
   }
