updated photo location vite

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,5 +18,11 @@
     "strict": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "tailwind.config.ts", "postcss.config.ts"]
+  "include": [
+    "src",
+    "tailwind.config.ts",
+    "postcss.config.ts",
+    "public/profile-photos",
+    "public/profilePhotos.ts"
+  ]
 }
