--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "outDir": "./src/dist",
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     /* Linting */
     "noFallthroughCasesInSwitch": true
   },
