--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,11 @@
     "start": "ts-node ./src/index.ts",
     "client": "npm run start --prefix ../client",
     "server": "nodemon ./src/index.ts",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --force --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -27,7 +27,6 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.1",
