--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "ts-node ./src/index.ts",
-    "client": "npm run start --prefix ../client",
+    "client": "npm run start --prefix client",
     "server": "nodemon ./src/index.ts",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --force --prefix client && npm run build --prefix client"
