--- a/server/client/package.json
+++ b/server/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.16.0",
     "react-use-measure": "^2.1.1",
     "set-random-interval": "^1.1.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
@@ -56,6 +57,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.8.3",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10.4.16",
     "babel-jest": "^29.3.1",
