finished delete route backend and custom hook to sort tasks/css on client

--- a/server/client/tsconfig.json
+++ b/server/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext", "ESNext.Array"],
     "module": "ESNext",
     "skipLibCheck": true,
     "types": ["vite/client", "node"],
