--- a/server/client/package.json
+++ b/server/client/package.json
@@ -4,27 +4,27 @@
   "private": true,
   "presets": {},
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.5",
-    "@mui/x-date-pickers": "^7.22.0",
-    "@reduxjs/toolkit": "^2.3.0",
-    "axios": "^1.7.7",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.5.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^12.15.0",
     "lodash": "^4.17.21",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.27.0",
-    "react-use-measure": "^2.1.1",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.1",
+    "react-use-measure": "^2.1.7",
     "set-random-interval": "^1.1.0",
-    "uuid": "^10.0.0",
-    "web-vitals": "^4.2.4",
-    "yup": "^1.4.0"
+    "uuid": "^11.1.0",
+    "web-vitals": "^5.0.2",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "vite",
@@ -50,27 +50,31 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/lodash": "^4.17.12",
-    "@types/node": "^22.8.0",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/lodash": "^4.17.17",
+    "@types/node": "^22.15.29",
+    "@types/react-dom": "^19.1.5",
     "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
+    "@vitejs/plugin-react": "^4.5.0",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^2.5.1",
-    "postcss": "^8.4.47",
-    "react-test-renderer": "^18.3.1",
-    "tailwindcss": "^3.4.14",
+    "msw": "^2.8.7",
+    "postcss": "^8.5.4",
+    "react-test-renderer": "^19.1.0",
+    "tailwindcss": "^4.1.8",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
