--- a/server/client/tsconfig.json
+++ b/server/client/tsconfig.json
@@ -18,5 +18,5 @@
     "strict": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "tailwind.config.ts", "postcss.config.ts"]
+  "include": ["src", "tailwind.config.ts"]
 }
